<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
  <string name="app_name">​Assign 4 2018 Michael McMullin</string>
  <string-array name="ui_time_entries">
    <item>" 1"</item>
    <item>" 2"</item>
    <item>" 3"</item>
    <item>" 4"</item>
    <item>" 5"</item>
    <item>10</item>
    <item>14</item>
  </string-array>
  <string name="customer_name">Name</string>
  <string name="customer_name_hint">Enter Your Name</string>
  <string name="delivery_instruction">Delivery Address (if not collecting)</string>
  <string name="ready_time">Delivery/Collection in (days)</string>
  <string name="order_message_1">Please find my order attached</string>
  <string name="order_product_list">Products Ordered:</string>
  <string name="order_message_collect">I will collect it in</string>
  <string name="order_message_collect_from">Collection location</string>
  <string name="order_message_deliver">Please deliver to:</string>
  <string name="order_message_deliver_time">Please deliver it in</string>
  <string name="order_message_phone">Phone</string>
  <string name="order_message_days">days</string>
  <string name="order_message_day">day</string>
  <string name="order_message_end">Regards</string>
  <string name="to_email">my-tshirt@sda.ie</string>
  <string name="email_subject">Order Request </string>
  <string name="button_product_list">Product List</string>
  <string name="button_order_t_shirt">Order T-Shirt</string>
  <string name="button_place_order">Send Order</string>

  <!-- Product/Collection Feedback -->
  <string name="product_added">Added</string>
  <string name="product_removed">Removed</string>
  <string name="collection_selected">%s selected for collection</string>
  <string name="collection_off">No collection selected</string>

  <!-- Photo feedback -->
  <string name="photo_instruction">Take photo for T-Shirt</string>
  <string name="photo_success">Photo Taken successfully</string>
  <string name="photo_new_message">Click to replace photo</string>

  <!-- Content Description strings for image accessibility -->
  <string name="accessibility_main_logo">App logo</string>
  <string name="accessibility_order_photo">Photo for t-shirt order</string>
  <string name="accessibility_product_image">Product image</string>

  <!-- Error Messages -->
  <string name="validation_dialog_title">Notification</string>
  <string name="validation_confirmation_button">OK</string>
  <string name="error_customer_name_blank">You did not enter your name.</string>
  <string name="error_photo_blank">You must include a photo.</string>
  <string name="error_no_prefs">Error reading order details</string>
  <string name="error_no_order">Please complete an order before sending</string>
  <string name="error_no_products">Please select at least one product</string>
  <string name="error_no_address">Please pick a collection point here, or add a delivery address in the Orders tab</string>

  <!-- Tab names -->
  <string-array name="tab_titles">
    <item>Home</item>
    <item>Products</item>
    <item>Orders</item>
    <item>Collection</item>
  </string-array>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
