<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@android:color/darker_gray"
  android:orientation="vertical">

  <EditText
    android:id="@+id/editCustomer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/activity_padding"
    android:hint="@string/customer_name_hint"
    android:imeOptions="actionDone"
    android:inputType="text"
    android:textColor="@color/primary_color"
    android:textColorHint="@color/primary_color"/>

  <ImageView
    android:id="@+id/imageView"
    android:layout_width="match_parent"
    android:layout_height="170dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="24dp"
    android:layout_alignStart="@+id/editCustomer"
    android:layout_below="@+id/editCustomer"
    android:onClick="dispatchTakePictureIntent"
    android:scaleType="centerCrop"
    android:contentDescription="@string/accessibility_order_photo"
    app:srcCompat="@drawable/camera"/>

  <TextView
    android:id="@+id/imageText"
    android:textStyle="bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_alignBottom="@+id/imageView"
    android:layout_centerHorizontal="true"
    android:onClick="dispatchTakePictureIntent"
    android:text="@string/photo_instruction"
    android:textColor="#ffffff"
    android:textSize="20sp"
    />

  <EditText
    android:id="@+id/editOptional"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="54dp"
    android:layout_marginLeft="24dp"
    android:layout_marginRight="24dp"
    android:layout_alignEnd="@+id/imageView"
    android:layout_below="@+id/imageView"
    android:hint="@string/delivery_instruction"
    android:inputType="textMultiLine"
    android:textColor="@color/primary_color"
    android:textColorHint="@color/primary_color"/>


  <TextView
    android:id="@+id/editCollect"
    android:layout_width="256dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="89dp"
    android:layout_alignParentBottom="true"
    android:layout_alignStart="@+id/editCustomer"
    android:text="@string/ready_time"
    android:textColor="@color/primary_color"
    android:textSize="18sp"/>

  <Spinner
    android:id="@+id/spinner"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/activity_padding"
    android:layout_alignEnd="@id/imageView"
    android:layout_alignTop="@id/editCollect"
    android:layout_gravity="center"
    android:layout_toStartOf="@id/editCollect"
    android:gravity="start"
    android:textColor="#ffffff"
    android:textSize="15sp"/>

  <Button
    android:id="@+id/button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="7dp"
    android:layout_marginStart="69dp"
    android:layout_alignParentBottom="true"
    android:layout_alignStart="@+id/imageText"
    android:onClick="sendEmail"
    android:text="@string/button_place_order"
    android:textColor="@color/primary_color"/>
</RelativeLayout>