<!--
Updated original layout to create a scrollable interface. This helps get around problems
with views overlapping when moving between portrait and landscape.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
  <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_padding"
    android:orientation="vertical">

    <EditText
      android:id="@+id/editCustomer"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/customer_name_hint"
      android:imeOptions="actionDone"
      android:inputType="text"
      />

    <ImageView
      android:id="@+id/imageView"
      android:layout_width="match_parent"
      android:layout_height="170dp"
      android:layout_marginTop="@dimen/activity_padding"
      android:layout_below="@+id/editCustomer"
      android:contentDescription="@string/accessibility_order_photo"
      android:elevation="@dimen/activity_half_padding"
      android:scaleType="centerCrop"
      app:srcCompat="@drawable/camera"/>

    <TextView
      android:id="@+id/imageText"
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@+id/imageView"
      android:layout_centerHorizontal="true"
      android:elevation="@dimen/activity_half_padding"
      android:text="@string/photo_instruction"
      android:textColor="@color/light_accent"
      android:textSize="20sp"
      />

    <EditText
      android:id="@+id/editOptional"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/activity_padding"
      android:layout_below="@+id/imageView"
      android:gravity="top"
      android:hint="@string/delivery_instruction"
      android:imeOptions="actionDone"
      android:inputType="text"
      />

    <LinearLayout
      android:id="@+id/collect_wrapper"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/editOptional"
      android:layout_marginVertical="@dimen/activity_padding"
      android:orientation="horizontal">
      <TextView
        android:id="@+id/editCollect"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:text="@string/ready_time"
        android:textSize="18sp"/>
      <!-- Space helps to push the spinner to the right.
        https://stackoverflow.com/questions/6992804/how-to-right-align-widget-in-horizontal-linear-layout-android
        -->
      <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        />
      <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:gravity="end"
        />
    </LinearLayout>
  </RelativeLayout>
</ScrollView>